refactor: implement OAuth2 compatible authentication
